--- a/_includes/default/header/header.html
+++ b/_includes/default/header/header.html
@@ -35,7 +35,7 @@
 {%- endif %}
 
 {%- if site.data.conf.main.meta.google_site_verify and site.data.owner.google_site_verification != empty and site.data.owner.google_site_verification != nil and jekyll.environment != site.data.conf.main.google.site_verification.ignore %}
-  <meta name="google-site-verification" content="{{ site.data.owner.google_site_verification }}">
+  <meta name="google-site-verification" content="ovLmEyG3RVcWQBXYeT9jGJka2D-sjRawRTOyGMO6dh4">
 {%- endif %}
 
 {%- if site.data.conf.main.meta.mobile_app %}
