--- a/_includes/default/disqus-scripts.html
+++ b/_includes/default/disqus-scripts.html
@@ -57,7 +57,7 @@
 
   function disqusLoader() {
     var d = document, s = d.createElement('script');
-    s.src = 'https://{{ site.data.owner.disqus_shortname }}.disqus.com/embed.js';
+    s.src = 'https://passionleader-blog.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
   }
