--- a/_includes/post/disqus.html
+++ b/_includes/post/disqus.html
@@ -6,7 +6,7 @@
 
 <div id="disqus_thread">
  <script>
-    (function() { // DON'T EDIT BELOW THIS LINE
+    (function() {
     var d = document, s = d.createElement('script');
     s.src = 'https://passionleader-blog.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
